--- a/Assignment5Vers2/Assignment5Vers2.vcxproj
+++ b/Assignment5Vers2/Assignment5Vers2.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Assignment5Vers2.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Assignment5\test_script.py" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
