--- a/Assignment5Vers2/Assignment5Vers2.vcxproj.filters
+++ b/Assignment5Vers2/Assignment5Vers2.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Assignment5\test_script.py" />
+  </ItemGroup>
 </Project>
