--- a/Assignment5Vers2/Assignment5Vers2.vcxproj.filters
+++ b/Assignment5Vers2/Assignment5Vers2.vcxproj.filters
@@ -22,4 +22,9 @@
   <ItemGroup>
     <None Include="..\..\Assignment5\test_script.py" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Assignment5Vers2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
